@@ -461,11 +461,9 @@ sub parsePortals {
 		if (@args > 5) {
 			my $portal = "$args[0] $args[1] $args[2]";
 			my $dest = "$args[3] $args[4] $args[5]";
-			$$r_hash{$portal}{'source'}{'ID'} = $portal;
 			$$r_hash{$portal}{'source'}{'map'} = $args[0];
 			$$r_hash{$portal}{'source'}{'pos'}{'x'} = $args[1];
 			$$r_hash{$portal}{'source'}{'pos'}{'y'} = $args[2];
-			$$r_hash{$portal}{'dest'}{$dest}{'ID'} = $dest;
 			$$r_hash{$portal}{'dest'}{$dest}{'map'} = $args[3];
 			$$r_hash{$portal}{'dest'}{$dest}{'pos'}{'x'} = $args[4];
 			$$r_hash{$portal}{'dest'}{$dest}{'pos'}{'y'} = $args[5];
